--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ import com.android.builder.core.BuilderConstants
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.2"
 
     defaultConfig {
         minSdkVersion 15
@@ -32,17 +32,19 @@ android {
         hiddenapi.android.compileSdkVersion compileSdkVersion
         hiddenapi.android.buildToolsVersion buildToolsVersion
         preBuild.dependsOn ':hiddenapistubs:assembleRelease'
-        hiddenapi.preBuild << {
-            def hiddenapiCompiler = hiddenapi.android.libraryVariants[0].javaCompiler
-            def hiddenapiDestPath = hiddenapiCompiler.destinationDir.getAbsolutePath()
-            applicationVariants.all { variant ->
-                variant.javaCompiler.with {
-                    dependsOn hiddenapiCompiler
-                    options.bootClasspath = hiddenapiDestPath + File.pathSeparator + options.bootClasspath
-                    if (variant.name == BuilderConstants.RELEASE) {
-                        generateDocs.options.bootClasspath = files(options.bootClasspath.split(File.pathSeparator), destinationDir).asType(List)
-                        generateStubs.options.bootClasspath = generateDocs.options.bootClasspath
-                        compileStubs.classpath = files(options.bootClasspath.split(File.pathSeparator))
+        hiddenapi.preBuild {
+            doLast {
+                def hiddenapiCompiler = hiddenapi.android.libraryVariants[0].javaCompiler
+                def hiddenapiDestPath = hiddenapiCompiler.destinationDir.getAbsolutePath()
+                applicationVariants.all { variant ->
+                    variant.javaCompiler.with {
+                        dependsOn hiddenapiCompiler
+                        def newBootstrapPath = hiddenapiDestPath + File.pathSeparator + options.getBootstrapClasspath().asPath
+                        if (variant.name == BuilderConstants.RELEASE) {
+                            generateDocs.options.bootClasspath = files(newBootstrapPath.split(File.pathSeparator), destinationDir).asType(List)
+                            generateStubs.options.bootClasspath = generateDocs.options.bootClasspath
+                            compileStubs.classpath = files(newBootstrapPath.split(File.pathSeparator))
+                        }
                     }
                 }
             }
@@ -71,7 +73,9 @@ task generateDocs(type: Javadoc, dependsOn: 'compileReleaseSources') {
         addFileOption 'proofread', file("$buildDir/docs/proofread.txt")
         addStringOption 'todo', 'reference/todo.html'
         fileTree(dir: 'doclib/api', include: 'xposed_*.txt').visit {
+//            println("goo:before:" +  it.name)
             addStringOption 'since ' + it.file, it.name.replaceFirst(/^xposed_0*(\d*)\.txt$/, '$1')
+//            println("goo:  post:" +  it.name)
         }
 
         // The sources of the Android SDK are added to the sourcepath.
@@ -134,23 +138,31 @@ task generateAPI(dependsOn: ['generateDocs', 'generateStubs', 'jarStubs', 'jarSt
 // Make sure that hiddenapistubs are placed before the Android SDK in app.iml
 // as there doesn't seem to be any way to configure this in Android Studio.
 task fixIml {
-    ext.imlFile = projectDir.absolutePath + '/' + project.name + '.iml'
+    println("goo: fixIml 1")
+    ext.imlFile = projectDir.parent + '/.idea/modules/' + project.name + "/" + projectDir.parentFile.name + "." + project.name + '.iml'
+    println("goo: imlFilePath :" + imlFile )
     inputs.file imlFile
     outputs.file imlFile
 
+    println("goo: fixIml 2")
     doLast {
+        println("goo: fixIml 2.1")
         if (!file(imlFile).exists())
             return
 
+        println("goo: fixIml 2.2")
         // Parse the existing iml file
         def parse = new XmlParser().parse(imlFile)
+        println("goo: fixIml 2.3")
         def moduleComponent = parse.component.find { it.@name == 'NewModuleRootManager' }
 
+        println("goo: fixIml 3")
         // Check if it has already been fixed
         def orderEntries = moduleComponent.orderEntry
         if (orderEntries.find { it.@type == 'module' && it.@'module-name' == 'hiddenapistubs' })
             return
 
+        println("goo: fixIml 4")
         // Determine the index of the Android SDK entry
         def jdkOrderEntry = orderEntries.find { it.@type == 'jdk' }
         def jdkOrderEntryIndex = moduleComponent.children().indexOf(jdkOrderEntry)
@@ -159,11 +171,17 @@ task fixIml {
         moduleComponent.children().add(jdkOrderEntryIndex, new Node(null, 'orderEntry',
                 ['type': 'module', 'module-name': 'hiddenapistubs', 'exported': '']))
 
+        println("goo: fixIml 5")
         // Write the fixed iml file
         def printer = new XmlNodePrinter(new PrintWriter(new FileWriter(imlFile)))
         printer.preserveWhitespace = true
         printer.print(parse)
+        println("goo: fixIml 6")
     }
+}
+
+dependencies {
+    implementation project(path: ':hiddenapistubs')
 }
 
 tasks.preBuild.dependsOn fixIml
